<resources>
    <string name="app_name">Market</string>
    <string name="app_detalhes_vaga">Detalhes Vaga</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sair">Sair</string>

    <string name="label_matricula">Matrícula</string>
    <string name="label_senha">Senha</string>

    <string name="btn_entrar">ENTRAR</string>

    <string name="link_esqueci_senha">Esqueci minha senha</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="vagas_disponiveis">Vagas Disponíveis</string>
    <string name="holerite">Holerite</string>
    <string name="solicitacao_ferias">Solicitação de Férias</string>
    <string name="noticias">Notícias</string>
    <string name="market_area">Market Área</string>
    <string name="configuracao">Configuração</string>
    <string name="label_loja">Loja</string>
    <string name="label_celular">Celular</string>
    <string name="label_email">E-mail</string>
    <string name="label_cargo">Cargo</string>
    <string name="label_cpf">CPF</string>
    <string name="label_data_nascimento">Data Nascimento</string>
    <string name="label_mes_ano">Mês / Ano</string>
    <string name="btn_download">Download</string>
    <string name="label_inicio">Início</string>
    <string name="label_fim">Fim</string>
    <string name="btn_solicitar">Solicitar</string>
    <string name="label_observacao">Observação</string>
    <string name="home">Home</string>
    <string name="detalhes_vaga">Detalhes Vaga</string>
    <string name="noticia">Notícia</string>
    <string name="label_unidade">Unidade</string>
    <string name="label_data_inclusao">Data Inclusão</string>
    <string name="label_data_expiracao">Data Expiração</string>
    <string name="label_remuneracao">Remuneração</string>
    <string name="label_requisitos">Requisitos</string>
    <string name="mais"><b>MAIS</b></string>
    <string name="label_minha_loja">Minha Loja</string>
    <string name="label_vagas_minha_loja">Vagas - Minha Loja</string>
    <string name="label_noticias_minha_loja">Notícias - Minha Loja</string>
    <string name="label_outras_lojas">Outras Lojas</string>
    <string name="label_noticias_outras_lojas">Notícias - Outras Lojas</string>
    <string name="label_vagas_outras_lojas">Vagas - Outras Lojas</string>

</resources>

