<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.market.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnVagaDetalhesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/branco_fundo"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:shape="oval"
                app:cardBackgroundColor="@color/branco"
                app:cardCornerRadius="5dp">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/branco"
                    android:columnCount="2"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingTop="15dp"
                        android:text="@string/label_loja"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtVagaLoja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_columnSpan="2"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingTop="15dp"
                        android:text="@string/label_cargo"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtVagaCargo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_columnSpan="2"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingTop="15dp"
                        android:text="@string/label_data_inclusao"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtVagaDataInclusao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_columnSpan="2"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingTop="15dp"
                        android:text="@string/label_data_expiracao"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtVagaDataExpiracao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_columnSpan="2"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingTop="15dp"
                        android:text="@string/label_remuneracao"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtVagaRemuneracao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_columnSpan="2"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingTop="15dp"
                        android:text="@string/label_requisitos"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtVagaRequisito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:textColor="@color/preto"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_columnSpan="2"
                        android:background="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/btnAplicar"
                        android:layout_width="@dimen/nav_header_height"
                        android:layout_height="match_parent"
                        android:layout_columnSpan="2"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/branco"
                        android:text="Aplicar"/>
                </GridLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
