<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.market.activities.MainActivity">

    <LinearLayout
        android:id="@+id/lnSolicitarFeriasLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/branco_fundo"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:shape="oval"
            app:cardBackgroundColor="@color/branco">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <GridLayout
                    android:id="@+id/glFormularioFerias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/branco"
                    android:columnCount="2"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:text="@string/label_inicio"
                        android:textColor="@color/preto"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnInicio"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_border"
                        android:gravity="bottom|center_horizontal"
                        android:padding="10dp"
                        android:textAlignment="gravity"
                        android:textSize="18dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_columnSpan="2"
                        android:background="@color/cinza_claro"
                        android:paddingTop="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:text="@string/label_fim"
                        android:textColor="@color/preto"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnFim"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_border"
                        android:gravity="bottom|center_horizontal"
                        android:padding="10dp"
                        android:textAlignment="gravity"
                        android:textSize="18dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_columnSpan="2"
                        android:background="@color/cinza_claro"
                        android:paddingTop="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="15dp"
                        android:text="@string/label_observacao"
                        android:textColor="@color/preto"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtObs"
                        android:layout_width="wrap_content"
                        android:maxWidth="240dp"
                        android:layout_height="match_parent"
                        android:lines="2"
                        android:maxLength="1024"
                        android:minWidth="180dp"
                        android:padding="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_columnSpan="2"
                        android:background="@color/cinza_claro"
                        android:paddingTop="30dp" />
                </GridLayout>

                <Button
                    android:id="@+id/btnSolicitar"
                    android:layout_width="@dimen/nav_header_height"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_solicitar"
                    android:textColor="@color/branco" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
