<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.market.activities.MainActivity">

    <LinearLayout
        android:id="@+id/lnMeusDadosLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cinza"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:background="@color/cinza"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_8dp"
            android:paddingLeft="@dimen/margin_8dp"
            android:paddingRight="@dimen/margin_8dp"
            android:paddingTop="@dimen/margin_8dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:columnCount="2"
                android:padding="5dp"
                android:background="@color/branco">

                <ImageView
                    android:id="@+id/img_foto"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_rowSpan="3"
                    android:background="@color/branco"
                    android:src="@drawable/ic_funcionario" />

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/txtSobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_matricula"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtMatricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_loja"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_cargo"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtCargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />
            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:columnCount="2"
                android:padding="5dp"
                android:background="@color/branco">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_cpf"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_data_nascimento"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtDtNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_celular"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtcelular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="@string/label_email"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:textColor="@color/preto"
                    android:textSize="15dp" />

            </GridLayout>

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--android:background="@color/branco"-->
        <!--android:layout_weight="0.5"-->
        <!--android:layout_margin="4dp"-->
        <!--android:paddingBottom="@dimen/margin_8dp"-->
        <!--android:paddingLeft="@dimen/margin_8dp"-->
        <!--android:paddingRight="@dimen/margin_8dp"-->
        <!--android:paddingTop="@dimen/margin_8dp">-->

        <!--<TableLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:stretchColumns="0,1"-->
        <!--android:padding="5dp"-->
        <!--android:layout_margin="5dp">-->


        <!--<TableRow>-->
        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Outras Unidades"-->
        <!--android:fontFamily="sans-serif"-->
        <!--android:textColor="@color/preto"-->
        <!--android:paddingBottom="@dimen/margin_8dp"-->
        <!--android:paddingTop="@dimen/margin_8dp"-->
        <!--android:textSize="15dp"/>-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_ver_mais_outras_unidades"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:src="@drawable/ic_list_black_48dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:background="@color/branco"-->
        <!--android:layout_gravity="right"/>-->
        <!--</TableRow>-->

        <!--</TableLayout>-->

        <!--<ListView-->
        <!--android:layout_below="@+id/linearLayout_cabecalho"-->
        <!--android:id="@+id/lv_outras_unidades"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/branco" />-->

        <!--</LinearLayout>-->
    </LinearLayout>

</RelativeLayout>
